# AddressConverterISO20022

./: .gitignore  Cargo.toml  addresses.jsonl
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/app/: config.rs
src/app/commands/: create.rs
src/domain/errors/: db_error.rs
src/domain/interfaces/dto/: french_address_dto.rs  mod.rs
src/domain/models/: internal_address_model.rs  internal_address_to_create_model.rs  internal_address_to_update_model.rs  mod.rs
src/domain/repository/: address_repository.rs
src/infrastructure/dao/: mod.rs
src/infrastructure/dao/adapters/: internal_address_entity_adapter.rs  mod.rs
src/infrastructure/dao/entity/: internal_address_entity.rs  mod.rs
src/infrastructure/dto/adapters/: french_address_adapter.rs  mod.rs
src/infrastructure/factories/: address_create_usecase_factory.rs  mod.rs
src/infrastructure/repository/: address_filedb_repository.rs  mod.rs
src/usecases/: address_create_usecase.rs  mod.rs
